# dfalib

./: CMakeLists.txt  README.md
dfalibproj/: CMakeLists.txt
dfalibproj/include/dfalib/: algorithms.h  dfa.h  dnalangparser.h  grammargenerator.h  parserequest.h  stringutils.h
dfalibproj/include/regex/: regex.h
dfalibproj/sources/: CMakeLists.txt
dfalibproj/sources/dfa_testmod_ui/: CMakeLists.txt  CalculationView.qml  LoginView.qml  MessageComponent.qml  OptionsView.qml  authenticationmanager.cpp  authenticationmanager.h  machineid.cpp  main.cpp  main.qml  qml.qrc  resultmodel.cpp  resultmodel.h  runner.cpp  runner.h  wrapper.cpp  wrapper.h
dfalibproj/sources/dfalib/: CMakeLists.txt  algorithms.cpp  dfa.cpp  dnalangparser.cpp  grammargenerator.cpp  parserequest.cpp
dfalibproj/sources/regex/: regex.cpp
dfalibproj/sources/testmod/: CMakeLists.txt  main.cpp
scripts/testmods/: find_strongest_sequences.py
